# shopsmart

./: .replit  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  scraper.py  searches.db
templates/: dashboard.html  forecast.html  history.html  home.html  index.html  login.html  not_enough_data.html
