[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "matplotlib>=3.10.3",
    "pandas==2.2.3",
    "plotly>=6.2.0",
    "prophet==1.1.6",
    "requests==2.32.3",
    "serpapi>=0.1.5",
    "starlette>=0.41.3",
    "uvicorn==0.32.1",
]
